--- a/UI/editor3.html
+++ b/UI/editor3.html
@@ -15,7 +15,7 @@
             <div class="editor">
                 <textarea id="code" placeholder="Type your HTML and CSS here..."></textarea>
                 <button class="run-button" id="run-button">Run</button>
-                <button class="live-button" id="live-button">Live</button>
+                <button class="live-button" id="live-button">Open in New Window</button>
             </div>
             <div class="output">
                 <iframe id="output"></iframe>
