--- a/additionlPage/colour6.html
+++ b/additionlPage/colour6.html
@@ -54,7 +54,8 @@
         border-radius: 4px;
         margin: 0.4vw;
         border-radius: max(1.5vw, 10px);
-        box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.562);
+        /* box-shadow:rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
+        box-shadow:rgba(0, 0, 0, 0.4) 0px 2px 4px 0px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px 0px inset;
         font-size: max(1vw, 15px);
         font-weight: bold;
         text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
