--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </div>
           </div>
           <div class="topics">
-              <div class="topics_1"><button id="burger" ><img src="icon/image.png" alt="" width="50%"></button></div>
+              <div class="topics_1"><button id="burger" ><img src="/UI/icon/image.png" alt="" width="50%"></button></div>
               <div class="topics_2"></div>
               <div class="topics_3"></div>
               <div class="topics_4"></div>
