--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   
       <div id="sideBar">
         <div class="wrapper" id="wrapi">
-          <h3>CSS Contents</h3>
+          <h3>CSS </h3>
           <a href="#" onclick="loadHTMLContent('https://asapial.github.io/WebJa/CSS/LearningTopics/1. align-content.html', 'content2');  return false;">align-content</a>
 <a href="#" onclick="loadHTMLContent('https://asapial.github.io/WebJa/CSS/LearningTopics/2. align-items.html', 'content2');  return false;">align-items</a>
 <a href="#" onclick="loadHTMLContent('https://asapial.github.io/WebJa/CSS/LearningTopics/3. align-self.html', 'content2');  return false;">align-self</a>
