--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="UI_2.0.css">
-      <link rel="icon" href="/Picture/WebJaTitileIcon.png" type="image/x-icon">
+      <link rel="icon" href="https://asapial.github.io/WebJa-CSS-Project/Picture/WebJaTitileIcon.png" type="image/x-icon">
   </head>
   <body>
 
@@ -50,7 +50,7 @@
               </div>
           </div>
           <div class="topics">
-              <div class="topics_1"><button id="burger" ><img src="/UI/icon/image.png" alt="" width="50%"></button></div>
+              <div class="topics_1"><button id="burger" ><img src="https://asapial.github.io/WebJa-CSS-Project/UI/icon/image.png" alt="" width="50%"></button></div>
               <div class="topics_2"></div>
               <div class="topics_3"></div>
               <div class="topics_4"></div>
