--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="">LogIn</a>
               </div>
               <div class="LiveIt">
-                <button><a href="UI/editor3.html" target="_blank">LiveIt</a></button>
+                <button><a href="https://asapial.github.io/WebJa-CSS-Project/UI/editor3.html" target="_blank">LiveIt</a></button>
               </div>
           </div>
           <div class="topics">
