--- a/UI/editor3.html
+++ b/UI/editor3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="editor.css">
+    <link rel="stylesheet" href="https://asapial.github.io/WebJa-CSS-Project/editor.css">
     <title>WebJa HTML Editor</title>
 </head>
 <body>
