--- a/UI/editor3.html
+++ b/UI/editor3.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Editor.css">
+    <link rel="icon" href="https://asapial.github.io/WebJa-CSS-Project/Picture/WebJaTitileIcon.png" type="image/x-icon">
+
     <title>WebJa HTML Editor</title>
 </head>
 <body>
