--- a/Learning Topics/68. border-inline-style.html
+++ b/Learning Topics/68. border-inline-style.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>certainly-you-can-copy-the-formatt-35ca7fff-ba25-4601-ab7d-b49337d373a8</title>
+    <title>border-inline-style</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/cssFile/data.css"/>
 
@@ -11,8 +11,8 @@
   <div id="preview" class="preview scrollEditor">
     <div id="container-ruller" />
     <div id="preview-content">
-      <h1 type="title" class="main-title" id="certainly-you-can-copy-the-formatt-35ca7fff-ba25-4601-ab7d-b49337d373a8">
-certainly-you-can-copy-the-formatt-35ca7fff-ba25-4601-ab7d-b49337d373a8</h1>
+      <h1 type="title" class="main-title" id="border-inline-style">
+border-inline-style</h1>
 <h2 id="definition" class="preview-paragraph-0 preview-line 0" data_line_start="0" data_line_end="0" data_line="0,1" count_line="1">Definition</h2>
 <div class="preview-paragraph-1 preview-line 1" data_line_start="1" data_line_end="1" data_line="1,2" count_line="1">The <code>border-inline-style</code> CSS property sets the line style of the logical inline borders of an element, which correspond to the left and right borders in a left-to-right (LTR) writing mode, and the right and left borders in a right-to-left (RTL) writing mode.</div>
 <h2 id="values" class="preview-paragraph-3 preview-line 3" data_line_start="3" data_line_end="3" data_line="3,4" count_line="1">Values</h2>
