--- a/Learning Topics/1. align-content.html
+++ b/Learning Topics/1. align-content.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>align-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" href="/cssFile/data.css"/>
 </head>
 <body>
   <div id="preview" class="preview scrollEditor">
