--- a/UI/UI_2.0.html
+++ b/UI/UI_2.0.html
@@ -10,7 +10,7 @@
     <title>WebJa</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="UI_2.0.css">
+    <link rel="stylesheet" href="/UI_2.0.css">
       <link rel="icon" href="/Picture/WebJaTitileIcon.png" type="image/x-icon">
   </head>
   <body>
@@ -46,7 +46,7 @@
                 <a href="">LogIn</a>
               </div>
               <div class="LiveIt">
-                <button><a href="editor3.html" target="_blank">LiveIt</a></button>
+                <button><a href="editor4.html" target="_blank">LiveIt</a></button>
               </div>
           </div>
           <div class="topics">
