--- a/tools/converter.html
+++ b/tools/converter.html
@@ -12,33 +12,65 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            /* height: 100vh; */
             padding: 20px;
             box-sizing: border-box;
         }
 
         .container {
-            background: #ffffff;
             padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 800px;
+            width: 1000px;
             max-width: 100%;
+            background-color: whitesmoke;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+            border-radius: 20px;
+
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+            grid-template-rows: 60px auto 50px auto 50px;
+            grid-template-areas: "h h "
+            "ip ip "
+            "bt1 bt1"
+            "op op"
+            "bt2 bt2";
         }
 
         h1 {
+            grid-area: h;
             margin-top: 0;
             text-align: center;
-            color: #333;
+            background: linear-gradient(45deg,#68068f,#68068f,#ff0000,#6C3483);
+            -webkit-background-clip: text;
+            color: transparent;
+            font-family: 'Times New Roman', Times, serif;
         }
 
+        #html-input
+        {
+            grid-area: ip;
+        }
+        .button-container_1{
+            grid-area: bt1;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-evenly;
+        }
+        #markdown-output{
+            grid-area: op;
+        }
+        .button-container_2{
+            grid-area: bt2;
+        }
         textarea {
-            width: 100%;
-            height: 200px;
-            margin-bottom: 10px;
+            width: calc(100% - px);
+            height: 300px;
+            /* margin-bottom: 10px; */
             padding: 15px;
             border: 1px solid #ccc;
-            border-radius: 6px;
+            border-radius: 10px;
             font-size: 16px;
             resize: none;
             font-family: 'Courier New', Courier, monospace;
@@ -46,23 +78,29 @@
 
         button {
             display: inline-block;
-            width: calc(50% - 10px);
+            width: calc(30% - 10px);
             padding: 10px;
-            background-color: #007bff;
-            color: #fff;
+            color: #DAF7A6 ;
             border: none;
-            border-radius: 6px;
+            border-radius: 10px;
             font-size: 16px;
             cursor: pointer;
             margin-top: 10px;
+            background-image: linear-gradient( #2C3E50, #506a83, #2C3E50);
+            box-shadow:rgba(0, 0, 0, 0.4) 0px 2px 4px 0px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.568) 0px -3px 0px 0px inset;
+            transition: .5s ease-in;
         }
+
+
 
         button:hover {
-            background-color: #0056b3;
+            color: #d2ff7d ;
+            scale: 1.05;
         }
 
+
         button:disabled {
-            background-color: #ccc;
+            background-color: #ccc !important;
             cursor: not-allowed;
         }
 
@@ -77,7 +115,7 @@
     <div class="container">
         <h1>HTML to Markdown Converter</h1>
         <textarea id="html-input" placeholder="Paste your HTML code here..."></textarea>
-        <div class="button-container">
+        <div class="button-container_1">
             <button id="convert-btn">Convert to Markdown</button>
             <button id="copy-html-btn">Copy HTML</button>
         </div>
