--- a/UI/UI_2.0.html
+++ b/UI/UI_2.0.html
@@ -10,7 +10,8 @@
     <title>WebJa</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/UI_2.0.css">
+    <link rel="stylesheet" href="/UI/UI_2.0.css">
+     <!-- <link rel="stylesheet" href="/UI/UI_2.1.css"> -->
       <link rel="icon" href="/Picture/WebJaTitileIcon.png" type="image/x-icon">
   </head>
   <body>
@@ -46,7 +47,7 @@
                 <a href="">LogIn</a>
               </div>
               <div class="LiveIt">
-                <button><a href="editor4.html" target="_blank">LiveIt</a></button>
+                <button><a href="editor5.html" target="_blank">LiveIt</a></button>
               </div>
           </div>
           <div class="topics">
@@ -65,7 +66,7 @@
           </div>
       </div>
   
-      <div id="sideBar">
+      <div id="sideBar" class="sideBar">
         <div class="wrapper" id="wrapi">
             <h3>CSS Contents</h3>
             <a href="#" onclick="loadHTMLContent('/Learning Topics/1. align-content.html', 'content2');  return false;">align-content</a>
