--- a/Instruction&Data/test.html
+++ b/Instruction&Data/test.html
@@ -3,104 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Markdown to HTML Converter</title>
     <style>
         body {
+            font-family: Arial, sans-serif;
+            background-color: #2c2f33;
+            color: #ffffff;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f8f8f8;
             margin: 0;
         }
-        .main-container {
-            background-color: #fff;
-            border-radius: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 80%;
+        .container {
+            background-color: #23272a;
+            border-radius: 8px;
             padding: 20px;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            width: 500px;
         }
-        .sub-container {
-            width: 80%;
-            margin: 10px auto;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.555);
-            border-radius: 20px;
-            background-color: #dcdbdb;
-            display: flex;
-            justify-content: space-around;
-            margin-bottom: 30px;
+        textarea {
+            width: 100%;
+            height: 200px;
+            border: none;
+            border-radius: 5px;
+            padding: 10px;
+            background-color: #2c2f33;
+            color: #ffffff;
+            resize: none;
         }
-        .box {
-            width: 50px;
-            height: 50px;
-            background-color: #4CAF50;
-            margin: 10px;
-            border-radius: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            font-size: 1em;
+        button {
+            background-color: #7289da;
+            color: #ffffff;
+            border: none;
+            padding: 10px 20px;
+            margin: 10px 0;
+            border-radius: 5px;
+            cursor: pointer;
         }
-        .none .box {
-            flex: none;
-        }
-        .grow .box {
-            flex: 1;
-        }
-        .grow-shrink .box {
-            flex: 1 2;
-        }
-        .grow-shrink-basis .box {
-            flex: 1 2 50px;
-        }
-        .auto .box {
-            flex: auto;
+        button:hover {
+            background-color: #99aab5;
         }
     </style>
+    <!-- Load the Marked library from CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
-    <div class="main-container">
-        <h1>flex Property Values</h1>
-        
-        <div class="sub-container none">
-            <h2>none</h2>
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-        </div>
-
-        <div class="sub-container grow">
-            <h2>grow</h2>
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-        </div>
-
-        <div class="sub-container grow-shrink">
-            <h2>grow-shrink</h2>
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-        </div>
-
-        <div class="sub-container grow-shrink-basis">
-            <h2>grow-shrink-basis</h2>
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-        </div>
-
-        <div class="sub-container auto">
-            <h2>auto</h2>
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-        </div>
+    <div class="container">
+        <h2>Markdown to HTML Converter</h2>
+        <textarea id="markdown-input" placeholder="Paste your markdown text here..."></textarea>
+        <br>
+        <button id="copy-button">Paste Clipboard Text</button>
+        <button id="convert-button">Convert to HTML</button>
+        <button id="download-button" style="display: none;">Download HTML</button>
     </div>
+
+    <script>
+        document.getElementById('copy-button').addEventListener('click', async () => {
+            try {
+                const text = await navigator.clipboard.readText();
+                document.getElementById('markdown-input').value = text;
+            } catch (err) {
+                alert('Failed to read clipboard contents.');
+            }
+        });
+
+        document.getElementById('convert-button').addEventListener('click', () => {
+            const markdownText = document.getElementById('markdown-input').value;
+            const htmlText = marked(markdownText);
+            downloadHtmlFile(htmlText);
+        });
+
+        function downloadHtmlFile(html) {
+            const blob = new Blob([html], { type: 'text/html' });
+            const url = URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = 'converted.html';
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+        }
+    </script>
 </body>
 </html>
