--- a/UI/UI_2.0.html
+++ b/UI/UI_2.0.html
@@ -11,6 +11,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/UI/UI_2.0.css">
+    <link rel="stylesheet" href="/cssFile/data.css"/>
      <!-- <link rel="stylesheet" href="/UI/UI_2.1.css"> -->
       <link rel="icon" href="/Picture/WebJaTitileIcon.png" type="image/x-icon">
   </head>
