--- a/Instruction&Data/test.html
+++ b/Instruction&Data/test.html
@@ -3,87 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markdown to HTML Converter</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #2c2f33;
-            color: #ffffff;
+            background-color: #f5f5f5;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             margin: 0;
         }
         .container {
-            background-color: #23272a;
-            border-radius: 8px;
+            background-color: #ffffff;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            border-radius: 20px;
+            width: 80%;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            width: 500px;
+            text-align: center;
         }
-        textarea {
-            width: 100%;
-            height: 200px;
-            border: none;
-            border-radius: 5px;
-            padding: 10px;
-            background-color: #2c2f33;
-            color: #ffffff;
-            resize: none;
+        .sub-container {
+            width: 80%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.555);
+            border-radius: 20px;
+            background-color: #dcdbdb;
+            margin: 20px auto;
+            padding: 20px;
         }
-        button {
-            background-color: #7289da;
-            color: #ffffff;
-            border: none;
-            padding: 10px 20px;
-            margin: 10px 0;
-            border-radius: 5px;
-            cursor: pointer;
+        .sub-container h2 {
+            margin-bottom: 20px;
         }
-        button:hover {
-            background-color: #99aab5;
+        img {
+            max-width: 100%;
+            border-radius: 20px;
+            margin-bottom: 20px;
         }
     </style>
-    <!-- Load the Marked library from CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <title>Image Resolution Example</title>
 </head>
 <body>
     <div class="container">
-        <h2>Markdown to HTML Converter</h2>
-        <textarea id="markdown-input" placeholder="Paste your markdown text here..."></textarea>
-        <br>
-        <button id="copy-button">Paste Clipboard Text</button>
-        <button id="convert-button">Convert to HTML</button>
-        <button id="download-button" style="display: none;">Download HTML</button>
+        <h1>Image Resolution</h1>
+        
+        <div class="sub-container">
+            <h2>Original Image</h2>
+            <img src="/PictureForWebDevlopment/640X360.jpg" alt="Original Image">
+        </div>
+        
+        <div class="sub-container">
+            <h2>300dpi Image</h2>
+            <img src="/PictureForWebDevlopment/640X360_300dpi.jpg" alt="300dpi Image">
+        </div>
+
+        <div class="sub-container">
+            <h2>2x Resolution Image</h2>
+            <img src="/PictureForWebDevlopment/640X360_2x.jpg" alt="2x Resolution Image">
+        </div>
     </div>
-
-    <script>
-        document.getElementById('copy-button').addEventListener('click', async () => {
-            try {
-                const text = await navigator.clipboard.readText();
-                document.getElementById('markdown-input').value = text;
-            } catch (err) {
-                alert('Failed to read clipboard contents.');
-            }
-        });
-
-        document.getElementById('convert-button').addEventListener('click', () => {
-            const markdownText = document.getElementById('markdown-input').value;
-            const htmlText = marked(markdownText);
-            downloadHtmlFile(htmlText);
-        });
-
-        function downloadHtmlFile(html) {
-            const blob = new Blob([html], { type: 'text/html' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'converted.html';
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-        }
-    </script>
 </body>
 </html>
