--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="UI_2.0.css">
-      <link rel="icon" href="https://asapial.github.io/WebJa-CSS-Project/Picture/WebJaTitileIcon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://asapial.github.io/WebJa-CSS-Project/cssFile/data.css"/>
+    <link rel="icon" href="https://asapial.github.io/WebJa-CSS-Project/Picture/WebJaTitileIcon.png" type="image/x-icon">
   </head>
   <body>
 
